<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default_value" translatable="false">94043</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_dialog_title">Location</string>

    <string name="pref_temperature_units">Temperature Unit</string>
    <string name="pref_temperature_units_title">Temperature Units</string>
    <string name="pref_temperature_units_dialog_title">Temperature Units</string>
    <string name="pref_temperature_units_key" translatable="false">temperature_units</string>
    <string name="pref_temperature_units_default_value" translatable="false">@string/pref_temperature_units_metric</string>
    <string name="pref_temperature_units_metric" translatable="false">metric</string>
    <string name="pref_temperature_units_imperial" translatable="false">Imperial</string>
    <string name="action_view_map">View Map</string>
    <string name="action_share">Share</string>
</resources>
